--- a/Kesikaran_Typist/Base.lproj/Main.storyboard
+++ b/Kesikaran_Typist/Base.lproj/Main.storyboard
@@ -709,16 +709,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="1440" height="738"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
-                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="veG-Rx-wIW">
-                                <rect key="frame" x="661" y="682" width="119" height="26"/>
-                                <textFieldCell key="cell" lineBreakMode="clipping" title="Hello, World" id="g8K-5w-Mey">
-                                    <font key="font" metaFont="system" size="22"/>
-                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
-                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
-                                </textFieldCell>
-                            </textField>
                             <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="qHt-di-hlu">
-                                <rect key="frame" x="570" y="203" width="300" height="40"/>
+                                <rect key="frame" x="570" y="181" width="300" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="E4M-a8-Biw"/>
                                     <constraint firstAttribute="width" constant="300" id="Klc-K8-Jgw"/>
@@ -730,7 +722,7 @@
                                 </textFieldCell>
                             </textField>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Zxa-KR-Wg0">
-                                <rect key="frame" x="673" y="648" width="95" height="24"/>
+                                <rect key="frame" x="673" y="103" width="95" height="24"/>
                                 <textFieldCell key="cell" lineBreakMode="clipping" title="Typed: XX" id="Yp1-qP-g7I">
                                     <font key="font" metaFont="system" size="20"/>
                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -738,31 +730,15 @@
                                 </textFieldCell>
                             </textField>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="IQQ-fd-8P7">
-                                <rect key="frame" x="679" y="619" width="82" height="24"/>
+                                <rect key="frame" x="679" y="142" width="82" height="24"/>
                                 <textFieldCell key="cell" lineBreakMode="clipping" title="Char: XX" id="NRB-7T-62j">
                                     <font key="font" metaFont="system" size="20"/>
                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                     <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
                             </textField>
-                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="kIt-Hg-rsA">
-                                <rect key="frame" x="656" y="167" width="128" height="21"/>
-                                <textFieldCell key="cell" lineBreakMode="clipping" title="TypedKeyLabel" id="lrp-5L-EvX">
-                                    <font key="font" metaFont="system" size="18"/>
-                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
-                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
-                                </textFieldCell>
-                            </textField>
-                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="vog-A3-3bB">
-                                <rect key="frame" x="652" y="131" width="136" height="21"/>
-                                <textFieldCell key="cell" lineBreakMode="clipping" title="TypedCharLabel" id="R4K-4B-4Em">
-                                    <font key="font" metaFont="system" size="18"/>
-                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
-                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
-                                </textFieldCell>
-                            </textField>
                             <customView translatesAutoresizingMaskIntoConstraints="NO" id="YbI-aM-eKf" userLabel="KeyBord View" customClass="KeybordBack" customModule="Kesikaran_Typist" customModuleProvider="target">
-                                <rect key="frame" x="265" y="263" width="910" height="340"/>
+                                <rect key="frame" x="265" y="348" width="910" height="340"/>
                                 <subviews>
                                     <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="lA1-i5-cjs" userLabel="F" customClass="KeyView" customModule="Kesikaran_Typist" customModuleProvider="target">
                                         <rect key="frame" x="313" y="146" width="48" height="48"/>
@@ -1380,22 +1356,39 @@
                                     <constraint firstItem="hjz-dx-4NG" firstAttribute="top" secondItem="9v0-O7-gYC" secondAttribute="bottom" constant="5" id="zvD-6Y-Qcr"/>
                                 </constraints>
                             </customView>
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="dTb-q5-1Xa">
+                                <rect key="frame" x="688" y="287" width="64" height="21"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="21" id="Os8-xf-f92"/>
+                                </constraints>
+                                <textFieldCell key="cell" lineBreakMode="clipping" title="Sample" id="27n-C2-vCl">
+                                    <font key="font" metaFont="system" size="18"/>
+                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="vog-A3-3bB">
+                                <rect key="frame" x="652" y="246" width="136" height="21"/>
+                                <textFieldCell key="cell" lineBreakMode="clipping" title="TypedCharLabel" id="R4K-4B-4Em">
+                                    <font key="font" metaFont="system" size="18"/>
+                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
+                                </textFieldCell>
+                            </textField>
                         </subviews>
                         <constraints>
-                            <constraint firstItem="Zxa-KR-Wg0" firstAttribute="top" secondItem="veG-Rx-wIW" secondAttribute="bottom" constant="10" id="5L3-cf-N80"/>
                             <constraint firstItem="vog-A3-3bB" firstAttribute="centerX" secondItem="m2S-Jp-Qdl" secondAttribute="centerX" id="6R4-rK-Qxe"/>
                             <constraint firstItem="IQQ-fd-8P7" firstAttribute="centerX" secondItem="m2S-Jp-Qdl" secondAttribute="centerX" id="Bvs-Ou-Lye"/>
+                            <constraint firstItem="Zxa-KR-Wg0" firstAttribute="top" secondItem="IQQ-fd-8P7" secondAttribute="bottom" constant="15" id="C6n-U7-sbZ"/>
+                            <constraint firstItem="YbI-aM-eKf" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" constant="50" id="Ca5-4c-3rQ"/>
                             <constraint firstItem="YbI-aM-eKf" firstAttribute="centerX" secondItem="m2S-Jp-Qdl" secondAttribute="centerX" id="DPF-kv-ebO"/>
-                            <constraint firstItem="veG-Rx-wIW" firstAttribute="top" secondItem="m2S-Jp-Qdl" secondAttribute="top" constant="30" id="Q1A-tm-AW5"/>
-                            <constraint firstItem="kIt-Hg-rsA" firstAttribute="centerX" secondItem="m2S-Jp-Qdl" secondAttribute="centerX" id="VLV-pp-FUc"/>
-                            <constraint firstItem="vog-A3-3bB" firstAttribute="top" secondItem="kIt-Hg-rsA" secondAttribute="bottom" constant="15" id="VTg-Kn-lge"/>
+                            <constraint firstItem="dTb-q5-1Xa" firstAttribute="top" secondItem="YbI-aM-eKf" secondAttribute="bottom" constant="40" id="VLg-el-4My"/>
                             <constraint firstItem="qHt-di-hlu" firstAttribute="centerX" secondItem="m2S-Jp-Qdl" secondAttribute="centerX" id="ZBD-A0-0Uw"/>
-                            <constraint firstItem="YbI-aM-eKf" firstAttribute="top" secondItem="IQQ-fd-8P7" secondAttribute="bottom" constant="16" id="i5V-rN-iDE"/>
-                            <constraint firstItem="kIt-Hg-rsA" firstAttribute="top" secondItem="qHt-di-hlu" secondAttribute="bottom" constant="15" id="iTl-oV-Una"/>
-                            <constraint firstItem="qHt-di-hlu" firstAttribute="top" secondItem="YbI-aM-eKf" secondAttribute="bottom" constant="20" id="iYG-Kj-2Ed"/>
-                            <constraint firstItem="veG-Rx-wIW" firstAttribute="centerX" secondItem="m2S-Jp-Qdl" secondAttribute="centerX" id="jIl-2r-C8X"/>
-                            <constraint firstItem="IQQ-fd-8P7" firstAttribute="top" secondItem="Zxa-KR-Wg0" secondAttribute="bottom" constant="5" id="ofI-Jh-fSd"/>
+                            <constraint firstItem="vog-A3-3bB" firstAttribute="top" secondItem="dTb-q5-1Xa" secondAttribute="bottom" constant="20" id="huv-Aq-NE2"/>
+                            <constraint firstItem="qHt-di-hlu" firstAttribute="top" secondItem="vog-A3-3bB" secondAttribute="bottom" constant="25" id="k4U-bS-fNv"/>
+                            <constraint firstItem="IQQ-fd-8P7" firstAttribute="top" secondItem="qHt-di-hlu" secondAttribute="bottom" constant="15" id="pzv-e5-fEK"/>
                             <constraint firstItem="Zxa-KR-Wg0" firstAttribute="centerX" secondItem="m2S-Jp-Qdl" secondAttribute="centerX" id="rdh-dN-Hyk"/>
+                            <constraint firstItem="dTb-q5-1Xa" firstAttribute="centerX" secondItem="m2S-Jp-Qdl" secondAttribute="centerX" id="sj9-rj-tt6"/>
                         </constraints>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="color" keyPath="backgroundColor">
@@ -1448,7 +1441,6 @@
                         <outlet property="l_option" destination="hjz-dx-4NG" id="fxh-gY-U2s"/>
                         <outlet property="l_shift" destination="9v0-O7-gYC" id="JRp-af-TGI"/>
                         <outlet property="l_sq_bracket" destination="ZOM-vd-N4W" id="6ub-2U-kcZ"/>
-                        <outlet property="label" destination="veG-Rx-wIW" id="OCn-7e-cpv"/>
                         <outlet property="nine" destination="Iks-Lv-VVt" id="oQj-rw-vDn"/>
                         <outlet property="one" destination="oQm-aJ-07l" id="0LF-RV-Z0X"/>
                         <outlet property="quotation" destination="3tD-VV-Nu7" id="4aL-ur-9zL"/>
@@ -1458,6 +1450,7 @@
                         <outlet property="r_shift" destination="I4p-Vd-QUt" id="EmH-v7-ncJ"/>
                         <outlet property="r_sq_bracket" destination="al6-TW-0mP" id="qil-Is-xaV"/>
                         <outlet property="returnKey" destination="U9u-6t-klA" id="ZB8-nl-tLk"/>
+                        <outlet property="sampleTextlabel" destination="dTb-q5-1Xa" id="TmX-o3-w0q"/>
                         <outlet property="seven" destination="0o8-Rr-qxT" id="75U-Or-ymg"/>
                         <outlet property="six" destination="EOe-nm-LDa" id="2Ce-sw-GWS"/>
                         <outlet property="slash" destination="cqB-DL-NzF" id="PA9-qv-H2Y"/>
@@ -1468,7 +1461,6 @@
                         <outlet property="two" destination="bzG-QL-5Jd" id="td5-qn-2WG"/>
                         <outlet property="typedCharLabel" destination="IQQ-fd-8P7" id="ZP9-4P-F5d"/>
                         <outlet property="typedKanaLabel" destination="vog-A3-3bB" id="vbu-uY-h7Z"/>
-                        <outlet property="typedKeyLabel" destination="kIt-Hg-rsA" id="2Wx-SC-5GQ"/>
                         <outlet property="typedLabel" destination="Zxa-KR-Wg0" id="vXf-WK-Nhb"/>
                         <outlet property="zero" destination="gmj-uv-8fc" id="eB5-cY-zfT"/>
                     </connections>
